Bug 391868 - "Page Source very small with meta charset=windows-1258" [p=chris@pearce.org.nz (Chris Pearce) r+sr=dbaron a=blocking1.9+]